internal/gatewayapi/testdata/securitypolicy-with-merge-tcp-invalid.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tcp
      port: 9000
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/tcp
        ports:
        - containerPort: 9000
          name: tcp-9000
          protocol: TCP
          servicePort: 9000
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-route
    namespace: default
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-from-internal
        principal:
          clientCIDRs:
          - 10.0.0.0/8
    mergeType: StrategicMerge
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
      conditions:
      - lastTransitionTime: null
        message: Only authorization is supported for TCP (routes/listeners).
        reason: Invalid
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-gateway
    namespace: envoy-gateway
  spec:
    basicAuth:
      users:
        name: users-secret
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      sectionName: tcp
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: This policy is not reflected in the generated configuration because
          none of the listeners it targets has a route that this policy can be applied
          to.
        reason: NoAttachedRoutes
        status: "True"
        type: Warning
      - lastTransitionTime: null
        message: 'This policy is being overridden by other securityPolicies for these
          routes: [default/tcproute-1]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: TCPRoute
  metadata:
    name: tcproute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: tcp
    rules:
    - backendRefs:
      - name: tcp-service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 9000
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
      name: envoy-gateway/gateway-1/tcp
      port: 9000
      routes:
      - destination:
          metadata:
            kind: TCPRoute
            name: tcproute-1
            namespace: default
          name: tcproute/default/tcproute-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 10.244.0.5
              port: 8080
            metadata:
              kind: Service
              name: tcp-service-1
              namespace: default
              sectionName: "8080"
            name: tcproute/default/tcproute-1/rule/-1/backend/0
            protocol: TCP
            weight: 1
        metadata:
          kind: TCPRoute
          name: tcproute-1
          namespace: default
        name: tcproute/default/tcproute-1
